# Pratica-Red-Black

./: CMakeLists.txt  README.md
rb-lib/: CMakeLists.txt
rb-lib/include/: Node.hpp  Red-Black-Tree.hpp
rb-lib/src/: Red-Black-Tree.cpp
tests/: CMakeLists.txt  test1.cpp
